# dain

./: .gitignore  README.md  pyproject.toml
.github/workflows/: docs.yaml  publish.yaml
src/cuda/: kernels.cu  kernels.cuh
src/dain/: __init__.py  core.py
tests/: test_core.py
