[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "dain"
version = "0.1.0"
description = "A minimalist Python CUDA library"
requires-python = ">=3.8"
authors = [
    {name = "Dan Wahl", email = "hi@danwahl.net"}
]
readme = "README.md"
license = {text = "MIT"}

dependencies = ["numpy"]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Repository = "https://github.com/danwahl/dain"

[tool.scikit-build]
cmake.version = ">=3.15"
